--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>matthew-bitter</title>
+    <title>Matthew Bitter - Web & Game Developer</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <meta name="description" content="The personal website for Matthew Bitter, a web and game developer based in Cincinnati, Ohio.">
+    <meta name="image" content="https://matthewbitter.com/favicon.png">
+    <meta itemprop="name" content="Matthew Bitter">
+    <meta itemprop="description" content="The personal website for Matthew Bitter, a web and game developer based in Cincinnati, Ohio.">
+    <meta itemprop="image" content="https://matthewbitter.com/favicon.png">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Matthew Bitter">
+    <meta name="twitter:description" content="The personal website for Matthew Bitter, a web and game developer based in Cincinnati, Ohio.">
+    <meta name="twitter:image:src" content="https://matthewbitter.com/favicon.png">
+    <meta name="og:title" content="Matthew Bitter">
+    <meta name="og:description" content="The personal website for Matthew Bitter, a web and game developer based in Cincinnati, Ohio.">
+    <meta name="og:image" content="https://matthewbitter.com/favicon.png">
+    <meta name="og:url" content="https://matthewbitter.com">
+    <meta name="og:site_name" content="Matthew Bitter">
+    <meta name="og:locale" content="en_US">
+    <meta name="og:type" content="website">
+    <style>
+
+      html, body
+      {
+          height: 100%;
+          width: 100%;
+          margin: 0;
+          padding: 0;
+          border: 0;
+          overflow-y: auto !important;
+          background-color: #111;
+          color: #fff;
+      }
+      @font-face {
+          font-family: 'Oswald';
+          font-style: normal;
+          font-weight: 400;
+          src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v16/TK3iWkUHHAIjg752HT8Ghe4.woff2) format('woff2');
+          unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+      }
+      /* vietnamese */
+
+      @font-face {
+          font-family: 'Oswald';
+          font-style: normal;
+          font-weight: 400;
+          src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v16/TK3iWkUHHAIjg752Fj8Ghe4.woff2) format('woff2');
+          unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+      }
+      /* latin-ext */
+
+      @font-face {
+          font-family: 'Oswald';
+          font-style: normal;
+          font-weight: 400;
+          src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v16/TK3iWkUHHAIjg752Fz8Ghe4.woff2) format('woff2');
+          unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+      }
+      /* latin */
+
+      @font-face {
+          font-family: 'Oswald';
+          font-style: normal;
+          font-weight: 400;
+          src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v16/TK3iWkUHHAIjg752GT8G.woff2) format('woff2');
+          unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      }
+    </style>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but matthew-bitter doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but this site doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135077464-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-135077464-1');
+    </script>
   </body>
 </html>
