--- a/public/index.html
+++ b/public/index.html
@@ -24,54 +24,7 @@
     <meta name="og:site_name" content="Matthew Bitter">
     <meta name="og:locale" content="en_US">
     <meta name="og:type" content="website">
-    <style>
-
-      html, body
-      {
-          height: 100%;
-          width: 100%;
-          margin: 0;
-          padding: 0;
-          border: 0;
-          overflow-y: auto !important;
-          background-color: #111;
-          color: #fff;
-      }
-      @font-face {
-          font-family: 'Oswald';
-          font-style: normal;
-          font-weight: 400;
-          src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v16/TK3iWkUHHAIjg752HT8Ghe4.woff2) format('woff2');
-          unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-      }
-      /* vietnamese */
-
-      @font-face {
-          font-family: 'Oswald';
-          font-style: normal;
-          font-weight: 400;
-          src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v16/TK3iWkUHHAIjg752Fj8Ghe4.woff2) format('woff2');
-          unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
-      }
-      /* latin-ext */
-
-      @font-face {
-          font-family: 'Oswald';
-          font-style: normal;
-          font-weight: 400;
-          src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v16/TK3iWkUHHAIjg752Fz8Ghe4.woff2) format('woff2');
-          unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-      }
-      /* latin */
-
-      @font-face {
-          font-family: 'Oswald';
-          font-style: normal;
-          font-weight: 400;
-          src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v16/TK3iWkUHHAIjg752GT8G.woff2) format('woff2');
-          unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-      }
-    </style>
+    <style>html, body { height: 100%; width: 100%; margin: 0; padding: 0; border: 0; overflow-y: auto !important; background-color: #111; color: #fff; }</style>
   </head>
   <body>
     <noscript>
@@ -80,14 +33,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135077464-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'UA-135077464-1');
-    </script>
+    <script>window.dataLayer = window.dataLayer || [];function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'UA-135077464-1');</script>
   </body>
 </html>
