--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Matthew Bitter - Web & Game Developer</title>
+    <link href="https://matthewbitter.com/" rel="canonical">
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons"> -->
     <meta name="description" content="The personal website for Matthew Bitter, a web and game developer based in Cincinnati, Ohio.">
