--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <meta name="og:site_name" content="Matthew Bitter">
     <meta name="og:locale" content="en_US">
     <meta name="og:type" content="website">
-    <style>html, body { height: 100%; width: 100%; margin: 0; padding: 0; border: 0; overflow-y: auto !important; background-color: #111; color: #fff; }</style>
+    <style>html, body { height: 100%; width: 100%; margin: 0; padding: 0; border: 0; overflow-y: auto !important; font-family: 'Oswald', sans-serif; background-color: #111; color: #fff; } .theme--dark { background-color: #111 !important; }</style>
   </head>
   <body>
     <noscript>
