--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,6 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Matthew Bitter - Web & Game Developer</title>
     <link href="https://matthewbitter.com/" rel="canonical">
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons"> -->
     <meta name="description" content="The personal website for Matthew Bitter, a web and game developer based in Cincinnati, Ohio.">
     <meta name="image" content="https://matthewbitter.com/favicon.png">
     <meta itemprop="name" content="Matthew Bitter">
@@ -25,7 +23,7 @@
     <meta name="og:site_name" content="Matthew Bitter">
     <meta name="og:locale" content="en_US">
     <meta name="og:type" content="website">
-    <style>html, body { height: 100%; width: 100%; margin: 0; padding: 0; border: 0; overflow-y: auto !important; font-family: 'Oswald', sans-serif; background-color: #111; color: #fff; } .theme--dark { background-color: #111 !important; }</style>
+    <style>html, body { height: 100%; width: 100%; margin: 0; padding: 0; border: 0; font-family: 'Oswald', sans-serif; background-color: #111; color: #fff; }</style>
   </head>
   <body>
     <noscript>
