--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <meta name="og:site_name" content="Matthew Bitter">
     <meta name="og:locale" content="en_US">
     <meta name="og:type" content="website">
-    <style>html, body { height: 100%; width: 100%; margin: 0; padding: 0; border: 0; font-family: 'Oswald', sans-serif; background-color: #111; color: #fff; }</style>
+    <style>@import url(/Oswald.woff2);html,body{height:100%;width:100%;margin:0;padding:0;border:0;background-color:#111;color:#fff}</style>
   </head>
   <body>
     <noscript>
