--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <meta name="og:locale" content="en_US">
     <meta name="og:type" content="website">
     <style>html,body{height:100%;width:100%;margin:0;padding:0;border:0;background-color:#111;color:#fff}</style>
+    <link href="/Oswald.woff2" ref="preload" as="style">
   </head>
   <body>
     <noscript>
@@ -33,5 +34,6 @@
     <!-- built files will be auto injected -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135077464-1"></script>
     <script>window.dataLayer = window.dataLayer || [];function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'UA-135077464-1');</script>
+    <link href="/Oswald.woff2" ref="stylesheet" type="text/css">
   </body>
 </html>
