--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,7 @@
     <meta name="og:site_name" content="Matthew Bitter">
     <meta name="og:locale" content="en_US">
     <meta name="og:type" content="website">
-    <style>html,body{height:100%;width:100%;margin:0;padding:0;border:0;background-color:#111;color:#fff}</style>
-    <link href="/Oswald.woff2" ref="preload" as="font" type="font/woff2" crossorigin>
+    <style>html,body{height:100%;width:100%;margin:0;padding:0;border:0;background-color:#111;color:#fff; font-family: 'Oswald', sans-serif;}</style>    
   </head>
   <body>
     <noscript>
